--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "galvanize-message",
+  "name": "g103-galvanize-message",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "test": "mocha --exit"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ejs": "~2.5.7",
     "express": "~4.16.0",
-    "knex": "^0.15.2",
-    "morgan": "~1.9.0",
-    "pg": "^7.5.0"
-  },
-  "devDependencies": {
-    "supertest": "^3.3.0",
-    "mocha": "^5.2.0",
-    "chai": "^4.2.0"
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0"
   }
 }
