--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "mocha --exit",
+    "start": "nodemon app.js"
   },
   "dependencies": {
+    "chai": "^4.2.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "mocha": "^5.2.0",
+    "morgan": "~1.9.0",
+    "nodemon": "^1.18.4"
+  },
+  "devDependencies": {
+    "supertest": "^3.3.0"
   }
 }
