--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "http-errors": "~1.6.2",
     "mocha": "^5.2.0",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "pg": "^7.5.0"
   },
   "devDependencies": {
     "supertest": "^3.3.0"
